# NapasDulu

./: .env  ActiveSessionHUD.tsx  LICENSE  LockdownSequence.tsx  README.md  SECURITY.md  add_microbreak.ps1  build_log.txt  fix_altx.ps1  fix_dep.ps1  fix_polling.ps1  fix_ts.ps1  fix_ts2.ps1  implementation_plan.md  package-lock.json  package.json  patch_autostart.ps1  patch_components.ps1  patch_final.ps1  patch_final2.ps1  patch_node.js  patch_node2.js  patch_node3.js  patch_notification.ps1  patch_utils.ps1  tailwind.config.js  tsc_error.txt  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  error.json  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: activity.rs  commands.rs  database.rs  lib.rs  main.rs
src/components/: ActiveSessionHUD.tsx  ActivityFeed.tsx  LockdownSequence.tsx  MicroBreak.tsx  Sidebar.tsx  StatCard.tsx
src/hooks/: useOverseer.ts
src/lib/: audio.ts  gemini.ts  utils.ts  voice.ts
src/locales/: en.json  id.json
src/views/: Analytics.tsx  Diagnostic.tsx  Settings.tsx
